--- a/money.web/packages.config
+++ b/money.web/packages.config
@@ -8,18 +8,19 @@
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net47" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net47" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.9" targetFramework="net47" />
-  <package id="Microsoft.Net.Compilers" version="2.8.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net47" />
+  <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="Ninject" version="3.3.4" targetFramework="net47" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net47" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net47" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net47" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net47" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
