--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ root = true
 indent_style = space
 
 # Code files
-[*.{cs,csx,js,ts}]
+[*.{cs,csx,js,json,ts,config,csproj}]
 indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
