--- a/money/money.csproj
+++ b/money/money.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-        <TypeScriptToolsVersion>3.4.5</TypeScriptToolsVersion>
+        <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
         <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
@@ -17,7 +17,7 @@
         <PackageReference Include="Dapper.Contrib" Version="1.60.1" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.4.5">
+        <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.5.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
