--- a/money/package.json
+++ b/money/package.json
@@ -3,55 +3,40 @@
     "name": "money",
     "private": true,
     "devDependencies": {
-        "@types/bootstrap": "4.3.0",
+        "@types/bootstrap": "4.3.1",
         "@types/bootstrap-datepicker": "0.0.13",
-        "@types/jest": "24.0.13",
-        "@types/jquery": "3.3.29",
+        "@types/jquery": "3.3.30",
         "@types/jquery-validation-unobtrusive": "3.2.32",
         "@types/jquery.validation": "1.16.6",
         "@types/js-cookie": "2.2.2",
-        "clean-webpack-plugin": "2.0.2",
+        "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
         "gulp-sass": "4.0.2",
         "gulp-autoprefixer": "6.1.0",
-        "jest": "24.8.0",
         "source-map-loader": "0.2.4",
-        "ts-jest": "24.0.2",
-        "ts-loader": "6.0.0",
-        "ts-node": "8.1.0",
-        "typescript": "3.5.2",
-        "webpack": "4.31.0",
-        "webpack-cli": "3.3.2"
+        "ts-loader": "6.0.4",
+        "ts-node": "8.3.0",
+        "typescript": "3.5.3",
+        "webpack": "4.35.3",
+        "webpack-cli": "3.3.5"
     },
     "dependencies": {
         "bootstrap": "4.3.1",
-        "bootstrap-datepicker": "1.8.0",
+        "bootstrap-datepicker": "1.9.0",
         "handlebars": "4.1.2",
         "jquery": "3.4.1",
-        "jquery-validation": "1.19.0",
+        "jquery-validation": "1.19.1",
         "jquery-validation-unobtrusive": "3.2.11",
         "js-cookie": "2.2.0",
-        "tslib": "1.9.3"
+        "tslib": "1.10.0"
     },
     "scripts": {
         "build": "webpack --mode=production --display-modules",
-        "watch": "webpack --watch --mode=production",
-        "test": "jest",
-        "coverage": "jest --coverage"
+        "watch": "webpack --watch --mode=production"
     },
     "browserslist": [
         "defaults"
     ],
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "jsdom",
-        "coveragePathIgnorePatterns": [
-            "/node_modules/",
-            "/legacy/",
-            "Fake.*",
-            "all.ts"
-        ]
-    },
     "-vs-binding": {
         "ProjectOpened": [
             "watch"
