--- a/money/package.json
+++ b/money/package.json
@@ -10,13 +10,13 @@
         "@types/js-cookie": "2.2.4",
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
-        "gulp-sass": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
+        "gulp-sass": "4.0.2",
         "source-map-loader": "0.2.4",
         "ts-loader": "6.2.1",
         "ts-node": "8.5.4",
-        "typescript": "3.7.3",
-        "webpack": "4.41.2",
+        "typescript": "^3.7.4",
+        "webpack": "^4.41.5",
         "webpack-cli": "3.3.10"
     },
     "dependencies": {
