--- a/money/money.csproj
+++ b/money/money.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
-        <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
         <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
         <LangVersion>latest</LangVersion>
-        <CodeAnalysisRuleSet>$(SolutionDir)\money.ruleset</CodeAnalysisRuleSet>
+        <CodeAnalysisRuleSet>..\money.ruleset</CodeAnalysisRuleSet>
         <RootNamespace>Money</RootNamespace>
     </PropertyGroup>
 
@@ -15,19 +14,17 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dapper" Version="1.60.6" />
-        <PackageReference Include="Dapper.Contrib" Version="1.60.1" />
-        <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.5.2">
+        <PackageReference Include="Dapper" Version="2.0.30" />
+        <PackageReference Include="Dapper.Contrib" Version="2.0.30" />
+        <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.7.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
     </ItemGroup>
 
 </Project>
