--- a/money/money.csproj
+++ b/money/money.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Content Remove="package-lock.json" />
+        <Content Remove="wwwroot\js\list.ts" />
     </ItemGroup>
 
     <ItemGroup>
