--- a/money/package.json
+++ b/money/package.json
@@ -3,22 +3,22 @@
     "name": "money",
     "private": true,
     "devDependencies": {
-        "@types/bootstrap": "4.3.1",
-        "@types/jquery": "3.3.31",
+        "@types/bootstrap": "^4.3.2",
+        "@types/jquery": "^3.3.34",
         "@types/jquery-validation-unobtrusive": "3.2.32",
         "@types/jquery.validation": "1.16.6",
-        "@types/js-cookie": "2.2.4",
-        "@types/sortablejs": "^1.10.2",
+        "@types/js-cookie": "^2.2.5",
+        "@types/sortablejs": "^1.10.4",
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-sass": "4.0.2",
         "source-map-loader": "0.2.4",
-        "ts-loader": "6.2.1",
-        "ts-node": "8.5.4",
-        "typescript": "^3.7.4",
-        "webpack": "^4.41.5",
-        "webpack-cli": "3.3.10"
+        "ts-loader": "^6.2.2",
+        "ts-node": "^8.8.2",
+        "typescript": "^3.8.3",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11"
     },
     "dependencies": {
         "bootstrap": "4.4.1",
@@ -27,7 +27,7 @@
         "jquery-validation-unobtrusive": "3.2.11",
         "js-cookie": "2.2.1",
         "sortablejs": "^1.10.2",
-        "tslib": "1.10.0"
+        "tslib": "^1.11.1"
     },
     "scripts": {
         "build": "webpack --mode=production --display-modules",
