--- a/money/package.json
+++ b/money/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "devDependencies": {
         "@types/bootstrap": "^4.5.0",
-        "@types/jquery": "^3.5.1",
+        "@types/jquery": "^3.5.5",
         "@types/jquery-validation-unobtrusive": "3.2.32",
         "@types/jquery.validation": "1.16.6",
         "@types/js-cookie": "^2.2.6",
@@ -13,24 +13,25 @@
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-sass": "^4.1.0",
-        "source-map-loader": "^1.0.2",
-        "ts-loader": "^8.0.2",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.2",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
+        "source-map-loader": "^2.0.0",
+        "ts-loader": "^8.0.15",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3",
+        "webpack": "^5.21.1",
+        "webpack-cli": "^4.5.0"
     },
     "dependencies": {
-        "bootstrap": "^4.5.2",
+        "autoprefixer": "^10.2.4",
+        "bootstrap": "^4.6.0",
         "jquery": "^3.5.1",
         "jquery-validation": "^1.19.3",
         "jquery-validation-unobtrusive": "3.2.11",
         "js-cookie": "2.2.1",
-        "sortablejs": "^1.10.2",
-        "tslib": "^2.0.1"
+        "sortablejs": "^1.13.0",
+        "tslib": "^2.1.0"
     },
     "scripts": {
-        "build": "webpack --mode=production --display-modules",
+        "build": "webpack --mode=production",
         "build-css": "gulp sass",
         "watch": "webpack --watch --mode=production"
     },
