--- a/money/package.json
+++ b/money/package.json
@@ -13,22 +13,22 @@
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-sass": "^4.1.0",
-        "source-map-loader": "^2.0.0",
-        "ts-loader": "^8.0.15",
+        "source-map-loader": "^2.0.1",
+        "ts-loader": "^8.1.0",
         "ts-node": "^9.1.1",
-        "typescript": "^4.1.3",
-        "webpack": "^5.21.1",
-        "webpack-cli": "^4.5.0"
+        "typescript": "^4.2.4",
+        "webpack": "^5.31.0",
+        "webpack-cli": "^4.6.0"
     },
     "dependencies": {
-        "autoprefixer": "^10.2.4",
+        "autoprefixer": "^10.2.5",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.5.1",
+        "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
-        "jquery-validation-unobtrusive": "3.2.11",
+        "jquery-validation-unobtrusive": "^3.2.12",
         "js-cookie": "2.2.1",
         "sortablejs": "^1.13.0",
-        "tslib": "^2.1.0"
+        "tslib": "^2.2.0"
     },
     "scripts": {
         "build": "webpack --mode=production",
