--- a/money/package.json
+++ b/money/package.json
@@ -11,17 +11,17 @@
         "@types/sortablejs": "^1.10.6",
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
-        "gulp-autoprefixer": "7.0.1",
+        "gulp-autoprefixer": "^8.0.0",
         "gulp-sass": "^4.1.0",
-        "source-map-loader": "^2.0.1",
-        "ts-loader": "^8.1.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.4",
-        "webpack": "^5.31.0",
-        "webpack-cli": "^4.6.0"
+        "source-map-loader": "^3.0.0",
+        "ts-loader": "^9.2.2",
+        "ts-node": "^10.0.0",
+        "typescript": "^4.3.2",
+        "webpack": "^5.38.1",
+        "webpack-cli": "^4.7.0"
     },
     "dependencies": {
-        "autoprefixer": "^10.2.5",
+        "autoprefixer": "^10.2.6",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
