--- a/money/package.json
+++ b/money/package.json
@@ -12,7 +12,8 @@
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "^8.0.0",
-        "gulp-sass": "^4.1.0",
+        "gulp-sass": "^5.0.0",
+        "sass": "^1.35.1",
         "source-map-loader": "^3.0.0",
         "ts-loader": "^9.2.2",
         "ts-node": "^10.0.0",
