--- a/money/package.json
+++ b/money/package.json
@@ -4,31 +4,31 @@
     "private": true,
     "devDependencies": {
         "@types/bootstrap": "^4.5.0",
-        "@types/jquery": "^3.5.5",
+        "@types/jquery": "^3.5.6",
         "@types/jquery-validation-unobtrusive": "3.2.32",
-        "@types/jquery.validation": "1.16.6",
-        "@types/js-cookie": "^2.2.6",
-        "@types/sortablejs": "^1.10.6",
+        "@types/jquery.validation": "^1.16.7",
+        "@types/js-cookie": "^2.2.7",
+        "@types/sortablejs": "^1.10.7",
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-sass": "^5.0.0",
-        "sass": "^1.35.1",
+        "sass": "^1.35.2",
         "source-map-loader": "^3.0.0",
         "ts-loader": "^9.2.3",
-        "ts-node": "^10.0.0",
+        "ts-node": "^10.1.0",
         "typescript": "^4.3.5",
-        "webpack": "^5.42.0",
+        "webpack": "^5.45.1",
         "webpack-cli": "^4.7.2"
     },
     "dependencies": {
-        "autoprefixer": "^10.2.6",
+        "autoprefixer": "^10.3.1",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
         "jquery-validation-unobtrusive": "^3.2.12",
         "js-cookie": "2.2.1",
-        "sortablejs": "^1.13.0",
+        "sortablejs": "^1.14.0",
         "tslib": "^2.3.0"
     },
     "scripts": {
