--- a/money/package.json
+++ b/money/package.json
@@ -3,6 +3,7 @@
     "name": "money",
     "private": true,
     "devDependencies": {
+        "@tsconfig/recommended": "^1.0.1",
         "@types/bootstrap": "^4.5.0",
         "@types/jquery": "^3.5.6",
         "@types/jquery-validation-unobtrusive": "3.2.32",
