--- a/money/package.json
+++ b/money/package.json
@@ -10,27 +10,27 @@
         "@types/jquery.validation": "^1.16.7",
         "@types/js-cookie": "^2.2.7",
         "@types/sortablejs": "^1.10.7",
-        "clean-webpack-plugin": "3.0.0",
+        "clean-webpack-plugin": "^4.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-sass": "^5.0.0",
-        "sass": "^1.35.2",
+        "sass": "^1.39.2",
         "source-map-loader": "^3.0.0",
-        "ts-loader": "^9.2.3",
-        "ts-node": "^10.1.0",
-        "typescript": "^4.3.5",
-        "webpack": "^5.45.1",
-        "webpack-cli": "^4.7.2"
+        "ts-loader": "^9.2.5",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.3",
+        "webpack": "^5.52.1",
+        "webpack-cli": "^4.8.0"
     },
     "dependencies": {
-        "autoprefixer": "^10.3.1",
+        "autoprefixer": "^10.3.4",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
         "jquery-validation-unobtrusive": "^3.2.12",
         "js-cookie": "2.2.1",
         "sortablejs": "^1.14.0",
-        "tslib": "^2.3.0"
+        "tslib": "^2.3.1"
     },
     "scripts": {
         "build": "webpack --mode=production",
