--- a/money/package.json
+++ b/money/package.json
@@ -5,9 +5,6 @@
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
         "@types/bootstrap": "^5.1.4",
-        "@types/jquery": "^3.5.6",
-        "@types/jquery-validation-unobtrusive": "3.2.32",
-        "@types/jquery.validation": "^1.16.7",
         "@types/sortablejs": "^1.10.7",
         "clean-webpack-plugin": "^4.0.0",
         "gulp": "4.0.2",
@@ -24,9 +21,7 @@
     "dependencies": {
         "autoprefixer": "^10.3.4",
         "bootstrap": "^5.1.1",
-        "jquery": "^3.6.0",
-        "jquery-validation": "^1.19.3",
-        "jquery-validation-unobtrusive": "^3.2.12",
+        "mab-dom": "^0.11.0",
         "sortablejs": "^1.14.0",
         "tslib": "^2.3.1"
     },
