--- a/money/package.json
+++ b/money/package.json
@@ -4,29 +4,24 @@
     "private": true,
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
-        "@types/bootstrap": "^4.5.0",
-        "@types/jquery": "^3.5.6",
-        "@types/jquery-validation-unobtrusive": "3.2.32",
-        "@types/jquery.validation": "^1.16.7",
+        "@types/bootstrap": "^5.1.5",
         "@types/sortablejs": "^1.10.7",
         "clean-webpack-plugin": "^4.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-sass": "^5.0.0",
-        "sass": "^1.39.2",
+        "sass": "^1.41.1",
         "source-map-loader": "^3.0.0",
         "ts-loader": "^9.2.5",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.3",
-        "webpack": "^5.52.1",
+        "webpack": "^5.53.0",
         "webpack-cli": "^4.8.0"
     },
     "dependencies": {
         "autoprefixer": "^10.3.4",
-        "bootstrap": "^4.6.0",
-        "jquery": "^3.6.0",
-        "jquery-validation": "^1.19.3",
-        "jquery-validation-unobtrusive": "^3.2.12",
+        "bootstrap": "^5.1.1",
+        "mab-dom": "^0.12.0",
         "sortablejs": "^1.14.0",
         "tslib": "^2.3.1"
     },
