--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,11 @@ steps:
     clean: true
     msbuildArguments: '/p:OutDir=$(Build.ArtifactStagingDirectory)'
 
+- task: NodeTool@0
+  displayName: 'Install NodeJS 16.13.0 Tooling'
+  inputs:
+    versionSpec: '16.13.0'
+
 - task: Npm@1
   displayName: 'NPM Package Restore'
   inputs:
